fix: fixed ui overflow issue.

--- a/static/main.css
+++ b/static/main.css
@@ -205,6 +205,7 @@ pre {
     font-family: monospace;
     /* font-size: 14px; */
     line-height: 1.6;
+    overflow-y: scroll;
 }
 
 .code-block {
